<resources>
    <string name="app_name">RPS Empire</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">Sign Up</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_game_setup">Game Setup</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_log_out">Log Out</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="startgame">Start Game</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="statistics">Statistics</string>
    <string name="achievements">Achievements</string>
    <string name="about_text">RPS Empire is the premiere "Rock, Paper, Scissors" application on the android platform. Created in 2015 by Evan Hanawalt and Tylor Lilley as a project for CSE5236.</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="title_game">Game</string>

    <string name="title_activity_home">Home</string>
    <string name="play">Play</string>
    <string name="sign_up_button_label">Sign Up</string>

    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="quit">Quit</string>
    <string name="join_game">Join Multiplayer Game</string>
    <string name="single_game">Start Single Player Game</string>
    <string name="host_game">Host Multiplayer Game</string>
    <string name="signin_other_error">Google Play Services Sign In Error</string>


</resources>
