<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:onClick="singlePlayerGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_game"
        android:id="@+id/single_player" />

    <Button
        android:onClick="hostGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_game"
        android:id="@+id/host_game" />

    <Button
        android:onClick="joinGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:id="@+id/join_game" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play for first to"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:id="@+id/best_of"
            android:layout_weight="1"
            android:editable="true"
            android:text="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="games wins!"
            android:id="@+id/textView2" />
    </LinearLayout>

    <Button
        android:onClick="back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/back" />
</LinearLayout>